src/objects/Apttus_Config2__OrderFulfillmentLineItem__c.object
<CustomObject>
    <description>Represents a fulfillment line item associated with one or more orders</description>
    <fields>
        <fullName>Apttus_Config2__FulfilledQuantity__c</fullName>
        <description>The fulfillment quantity for the order item</description>
        <inlineHelpText>The fulfillment quantity for the order item</inlineHelpText>
        <label>Fulfilled Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineNumber__c</fullName>
        <description>The line number</description>
        <inlineHelpText>The line number</inlineHelpText>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderFulfillmentId__c</fullName>
        <description>ID of the associated order fulfillment</description>
        <inlineHelpText>ID of the associated order fulfillment</inlineHelpText>
        <label>Order Fulfillment</label>
        <referenceTo>Apttus_Config2__OrderFulfillment__c</referenceTo>
        <relationshipLabel>Order Fulfillment Line Items</relationshipLabel>
        <relationshipName>OrderFulfillmentLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated order</description>
        <inlineHelpText>ID of the associated order</inlineHelpText>
        <label>Order</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Order Fulfillment Line Items</relationshipLabel>
        <relationshipName>OrderFulfillmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated order line item</description>
        <inlineHelpText>ID of the associated order line item</inlineHelpText>
        <label>Order Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Order Fulfillment Line Items</relationshipLabel>
        <relationshipName>OrderFulfillmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Fulfillment Line Item</label>
    <nameField>
        <displayFormat>FI-{0000000000}</displayFormat>
        <label>LineItem Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Fulfillment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>